[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/sprites/player/idle/player_idle_04.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/player/idle/player_idle_02.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/player/idle/player_idle_03.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/player/idle/player_idle_01.png" type="Texture" id=4]
[ext_resource path="res://assets/scenes/Player_00.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/level_intro_00.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sprites/player/start/start_04.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/player/start/start_01.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/player/start/start_03.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/player/start/start_02.png" type="Texture" id=10]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "start"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 7 ) ]
}

[node name="Player_00" type="KinematicBody2D" groups=["Inter"]]
script = ExtResource( 5 )

[node name="level_intro" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -18, 0, -15, -3, 11, -3, 14, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/start = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="finished" from="level_intro" to="." method="_on_level_intro_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
